# django-boilerplate-with-docker

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
apps/: Dockerfile  __init__.py  manage.py
apps/authentication/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/authentication/management/commands/: __init__.py  create_admin.py
apps/authentication/migrations/: 0001_initial.py  0002_user.py
apps/authentication/tests/: __init__.py  test_views.py
apps/config/: __init__.py  asgi.py  celery.py  depricated_settings.py  urls.py  wsgi.py
apps/config/settings/: __init__.py  base.py  development.py  staging.py
